Adicao de algumas messages e algumas pastas para estrutura de paginas

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -1,3 +1,9 @@
 import=Import
 year=Year
 documents.number=Number of Documents
+class=Class
+subclass=Subclass
+group=Group
+subgroup=Subgroup
+classification=Classification
+position=Position
