--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -1,3 +1,9 @@
 import=Importar
 year=Ano
 documents.number=N\u00FAmero de Documentos
+class=Classe
+subclass=Subclasse
+group=Grupo
+subgroup=Subgrupo
+classification=Classifica\u00E7\u00E3o
+position=Posi\u00E7\u00E3o
