Mudanças no template e no tema. Arrumado um problema no filtro de acesso.

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -1,4 +1,7 @@
 import=Import
+complete=Complete
+darklist=Dark List
+incomplete=Incomplete
 year=Year
 documents.number=Number of Documents
 class=Class
