--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -1,4 +1,7 @@
 import=Importar
+complete=Completas
+darklist=Lista Negra
+incomplete=Incompletas
 year=Ano
 documents.number=N\u00FAmero de Documentos
 class=Classe
