Checkbox pra mostrar apenas as patentes completas

--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -3,10 +3,11 @@ complete=Completas
 darklist=Lista Negra
 incomplete=Incompletas
 year=Ano
-documents.number=N\u00FAmero de Documentos
+documents.number=N\u00famero de Documentos
 class=Classe
 subclass=Subclasse
 group=Grupo
 subgroup=Subgrupo
-classification=Classifica\u00E7\u00E3o
-position=Posi\u00E7\u00E3o
+classification=Classifica\u00e7\u00e3o
+position=Posi\u00e7\u00e3o
+completo=Utilizar Projetos Completos
