Corrigido  bug quando o gráfico tem mais de 20 depositantes/inventores as linhas ultrapassam o rodapé da página

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -10,4 +10,4 @@ group=Group
 subgroup=Subgroup
 classification=Classification
 position=Position
-completo=Utilize Complete Projects
+completo=Use Only Complete Documents
