--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -10,4 +10,4 @@ group=Grupo
 subgroup=Subgrupo
 classification=Classifica\u00e7\u00e3o
 position=Posi\u00e7\u00e3o
-completo=Utilizar Projetos Completos
+completo=Utilizar Documentos Completos
