--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -11,3 +11,4 @@ subgroup=Subgrupo
 classification=Classifica\u00e7\u00e3o
 position=Posi\u00e7\u00e3o
 completo=Utilizar Documentos Completos
+calendar=pt
