Correção de Bugs

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -10,6 +10,46 @@ group=Group
 subgroup=Subgroup
 classification=Classification
 position=Position
-completo=Use Only Complete Documents
+completo=Only Use Complete Documents
 calendar=us
 priorities=Priorities
+period.interest=Period of Interest
+publication.date=Publication Date
+application.date=Application Date
+from=From
+to=To
+search=Search
+update=Update
+date.pattern=MM/dd/yyyy
+name=Name
+no.applicant=No Applicant Registered.
+main.applicant=Main Applicants
+main.inventor=Main Inventors
+empty=Empty
+main.classification=Main Classifications
+application.date=Application by Date
+priority.country=Priority Countries
+priority.date=Priority Dates
+overview=Overview
+reports=Reports
+public=Public
+shared=Shared
+private=Private
+open=Open
+edit=Edit
+delete=Delete
+new.project=New Project
+access.level=Access Level
+actions=Actions
+new.user=New User
+delete.user=Do you wish to delete this user?
+registered.user=There are no registered users.
+title=Title
+description=Description
+owner=Owner
+visibility=Visibility
+registered.project=There are no registered projects.
+delete.project=Do you wish to delete this project and the related data?
+list=List
+patents=Patents
+registerd.patent=There are no registered patents.
