--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -13,3 +13,43 @@ position=Posi\u00e7\u00e3o
 completo=Utilizar Documentos Completos
 calendar=pt
 priorities=Prioridades
+period.interest=Per\u00edodo de interesse
+publication.date=Data de Publica\u00e7\u00e3o
+application.date=Data de Dep\u00f3sito
+from=Inicial
+to=Final
+search=Pesquisar
+update=Atualizar
+date.pattern=dd/MM/yyyy
+name=Nome
+no.applicant=Nenhum Depositante Cadastrado.
+main.applicant=Principais Depositantes
+main.inventor=Principais Inventores
+empty=Vazio
+main.classification=Principais Classifica\u00e7\u00f5es
+application.date=Dep\u00f3sitos por Data
+priority.country=Pa\u00edses de Prioridade
+priority.date=Datas de Prioridade
+overview=Vis\u00e3o Geral
+reports=Relat\u00f3rios
+public=P\u00fablico
+shared=Compartilhado
+private=Privado
+open=Abrir
+edit=Editar
+delete=Deletar
+new.project=Novo Projeto
+access.level=N\u00edvel de Acesso
+actions=A\u00e7\u00f5es
+new.user=Novo Usu\u00e1rio
+delete.user=Deseja excluir esse usu\u00e1rio?
+registered.user=N\u00e3o existem usu\u00e1rios cadastrados.
+title=T\u00edtulo
+description=Descri\u00e7\u00e3o
+owner=Dono
+visibility=Visibilidade
+registered.project=N\u00e3o existem projetos cadastrados.
+delete.project=Deseja excluir este projeto e os dados relacionados?
+list=Listar
+patents=Patentes
+registered.patent=N\u00e3o existem patentes cadastradas.
