--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -53,3 +53,8 @@ delete.project=Do you wish to delete this project and the related data?
 list=List
 patents=Patents
 registerd.patent=There are no registered patents.
+about=About
+description.about=Description of the project
+credits=Credits
+project.manager=Manager of Projct
+technologiesandproducts=Technologies and Products
