--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -53,3 +53,8 @@ delete.project=Deseja excluir este projeto e os dados relacionados?
 list=Listar
 patents=Patentes
 registered.patent=N\u00e3o existem patentes cadastradas.
+about=Sobre
+description.about=Descri\u00e7\u00e3o do projeto
+credits=Cr\u00e9ditos
+project.manager=Gerente do Projeto
+technologiesandproducts=Tecnologias e Produtos
