Telas de listagem e edição da patente internacionalizadas; Criada documentação para patentController

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -1,6 +1,28 @@
+presentation.file=Presentation File
+patent.info=Patent Info
+save=Save
+cancel=Cancel
+add.applicant=Add Applicant
+add.inventor=Add Inventor
+add=Add
+header=Header
+download.file=Download Presentation File
+download.patent=Download Patent Info
+import.patent=Import Patents
+language=Language
+applicants=Applicants
+inventors=Inventors
+application.number=Application Number
+listing=Listing
+of=of
+patents.registered=patents registered
+value=Value
+acronym=Acronym
+country=Country
 import=Import
 complete=Complete
 darklist=Dark List
+undarklist=Remove from Darklist
 incomplete=Incomplete
 year=Year
 documents.number=Number of Documents
@@ -22,7 +44,8 @@ search=Search
 update=Update
 date.pattern=MM/dd/yyyy
 name=Name
-no.applicant=No Applicant Registered.
+no.applicant=No Applicants Registered
+no.inventor=No Inventors Registered
 main.applicant=Main Applicants
 main.inventor=Main Inventors
 empty=Empty
@@ -52,14 +75,14 @@ registered.project=There are no registered projects.
 delete.project=Do you wish to delete this project and the related data?
 list=List
 patents=Management
-registerd.patent=There are no registered patents.
+registered.patent=There are no registered patents.
 about=About
 description.about=Periscope is a result of the effort made by the Institute of Computing - UFMT, the main goal is provide to the brazilian community a tool that assists the utilization of the information contained in the Industrial Property System.
 credits=Credits
 project.manager=<h4>Project Coordination</h4>
 manager.project=<ul><li>Josiel Maimone de Figueiredo (josiel@ic.ufmt.br)</li></ul>
 project.development=<h4>Development</h4>
-developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Phellippe Pinheiro</li> <li>Christian Ferreira</li> </ul>
+developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Phellippe Pinheiro</li> <li>Christhian Ferreira</li> </ul>
 project.contribution=<h4>Contribution</4>
 contributors=<ul><li>Claudia Aparecida Martins</li> <li>Andreia Gentil Bonfante</li> <li>Thiago Meirelles Ventura</li> <li>Nilton Hideki Takagi</li> <li>Allan Gon\u00e7alves de Oliveira</li></ul>
 technologiesandproducts=Technologies and Products
