--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -1,6 +1,28 @@
+presentation.file=Folha de Rosto
+patent.info=Informa\u00e7\u00e3o da Patente
+save=Salvar
+cancel=Cancelar
+add.applicant=Adicionar Depositante
+add.inventor=Adicionar Inventor
+add=Adicionar
+header=Cabe\u00e7alho
+download.file=Download Folha de Rosto
+download.patent=Download Informa\u00e7\u00e3o da Patente
+import.patent=Importar Patentes
+language=L\u00edngua
+applicants=Depositantes
+inventors=Inventores
+application.number=N\u00famero de Dep\u00f3sito
+listing=Listando
+of=de
+patents.registered=patentes cadastradas
+value=Valor
+acronym=Acr\u00f4nimo
+country=Pa\u00eds
 import=Importar
 complete=Completas
 darklist=Lista Negra
+undarklist=Tirar da Lista Negra
 incomplete=Incompletas
 year=Ano
 documents.number=N\u00famero de Documentos
@@ -22,7 +44,8 @@ search=Pesquisar
 update=Atualizar
 date.pattern=dd/MM/yyyy
 name=Nome
-no.applicant=Nenhum Depositante Cadastrado.
+no.applicant=Nenhum Depositante Cadastrado
+no.inventor=Nenhum Inventor Cadastrado
 main.applicant=Principais Depositantes
 main.inventor=Principais Inventores
 empty=Vazio
@@ -59,7 +82,7 @@ credits=Cr\u00e9ditos
 project.manager=<h4>Coordena\u00e7\u00e3o do Projeto</h4>
 manager.project=<ul><li>Josiel Maimone de Figueiredo (josiel@ic.ufmt.br)</li></ul>
 project.development=<h4>Desenvolvimento</h4>
-developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Adrian Toledo Procopiou</li> <li>Phellippe Pinheiro</li> <li>Christian Ferreira</li> </ul>
+developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Adrian Toledo Procopiou</li> <li>Phellippe Pinheiro</li> <li>Christhian Ferreira</li> </ul>
 project.contribution=<h4>Contribui\u00e7\u00f5es</h4>
 contributors=<ul><li>Claudia Aparecida Martins</li> <li>Andreia Gentil Bonfante</li> <li>Thiago Meirelles Ventura</li> <li>Nilton Hideki Takagi</li> <li>Allan Gon\u00e7alves de Oliveira</li></ul>
 technologiesandproducts=Tecnologias e Produtos
