Adicionado campo de pesquisa na harmonização de applicants. Ainda não funcional.

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -101,3 +101,4 @@ public.research=Public Research Institution
 private.research=Private Research Institution
 public.company=Public Company
 public.university=Public University
+searchName=Name
