--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -101,3 +101,4 @@ public.research=Instituto P\u00fablico de Pesquisa
 private.research=Instituto Privado de Pesquisa
 public.company=Empresa P\u00fablica
 public.university=Universidade P\u00fablica
+searchName=Nome
