Adicionado internacionalização para campos de pesquisa adicionados

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -102,3 +102,7 @@ private.research=Private Research Institution
 public.company=Public Company
 public.university=Public University
 searchName=Name
+adjustmentLot=Adjustment Lot
+juridicalNature=Juridical Nature
+none=None
+apply=Apply
