--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -102,3 +102,7 @@ private.research=Instituto Privado de Pesquisa
 public.company=Empresa P\u00fablica
 public.university=Universidade P\u00fablica
 searchName=Nome
+adjustmentLot=Harmoniza\u00e7\u00e3o em lote
+juridicalNature=Natureza J\u00faridica
+none=Nenhum
+apply=Aplicar
