Edição de patente funcional e listagem corretamente de acordo com o patent scope

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -1,14 +1,23 @@
 presentation.file=Presentation File
-patent.info=Patent Info
+patent.info=Patent File
+patent.applicants=Patent's Applicants
+patent.inventors=Patent's Inventors
+applicants.available=Applicants available to addition
+inventors.available=Inventors available to addition
 save=Save
+close=Close
+date=Date
 cancel=Cancel
 add.applicant=Add Applicant
 add.inventor=Add Inventor
+add.priority= Add Priority
 add=Add
 header=Header
 download.file=Download Presentation File
-download.patent=Download Patent Info
+download.patent=Download Patent File
 import.patent=Import Patents
+edit.patent=Editing patent:
+link=Link
 language=Language
 applicants=Applicants
 inventors=Inventors
@@ -46,6 +55,7 @@ date.pattern=MM/dd/yyyy
 name=Name
 no.applicant=No Applicants Registered
 no.inventor=No Inventors Registered
+no.priorities=No Priorities Registered
 main.applicant=Main Applicants
 main.inventor=Main Inventors
 empty=Empty
@@ -61,6 +71,7 @@ private=Private
 open=Open
 edit=Edit
 delete=Delete
+new=New
 new.project=New Project
 access.level=Access Level
 actions=Actions
@@ -102,7 +113,3 @@ private.research=Private Research Institution
 public.company=Public Company
 public.university=Public University
 searchName=Name
-adjustmentLot=Adjustment Lot
-juridicalNature=Juridical Nature
-none=None
-apply=Apply
