--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -1,19 +1,28 @@
 presentation.file=Folha de Rosto
-patent.info=Informa\u00e7\u00e3o da Patente
+patent.info=Arquivo da Patente
+patent.applicants=Depositantes da Patente
+patent.inventors=Inventores da Patente
+applicants.available=Depositantes dispon\u00edveis para adicionar
+inventors.available=Inventores dispon\u00edveis para adicionar
 save=Salvar
+close=Fechar
+date=Data
 cancel=Cancelar
 add.applicant=Adicionar Depositante
 add.inventor=Adicionar Inventor
+add.priority=Adicionar Prioridade
 add=Adicionar
 header=Cabe\u00e7alho
 download.file=Download Folha de Rosto
-download.patent=Download Informa\u00e7\u00e3o da Patente
+download.patent=Download Arquivo da Patente
 import.patent=Importar Patentes
+edit.patent=Editando patente:
 language=L\u00edngua
 applicants=Depositantes
 inventors=Inventores
 application.number=N\u00famero de Dep\u00f3sito
 listing=Listando
+link=Vincular
 of=de
 patents.registered=patentes cadastradas
 value=Valor
@@ -46,6 +55,7 @@ date.pattern=dd/MM/yyyy
 name=Nome
 no.applicant=Nenhum Depositante Cadastrado
 no.inventor=Nenhum Inventor Cadastrado
+no.priorities=Nenhuma Prioridade Cadastrada
 main.applicant=Principais Depositantes
 main.inventor=Principais Inventores
 empty=Vazio
@@ -62,6 +72,7 @@ open=Abrir
 edit=Editar
 delete=Deletar
 new.project=Novo Projeto
+new= Novo
 access.level=N\u00edvel de Acesso
 actions=A\u00e7\u00f5es
 new.user=Novo Usu\u00e1rio
@@ -102,7 +113,3 @@ private.research=Instituto Privado de Pesquisa
 public.company=Empresa P\u00fablica
 public.university=Universidade P\u00fablica
 searchName=Nome
-adjustmentLot=Harmoniza\u00e7\u00e3o em lote
-juridicalNature=Natureza J\u00faridica
-none=Nenhum
-apply=Aplicar
