Opção de upload de arquivo da patente e folha de rosto desativados

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -4,6 +4,8 @@ patent.applicants=Patent's Applicants
 patent.inventors=Patent's Inventors
 applicants.available=Applicants available to addition
 inventors.available=Inventors available to addition
+options.file=Presentation file options
+options.patent=Patent file options
 save=Save
 close=Close
 date=Date
