--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -4,6 +4,8 @@ patent.applicants=Depositantes da Patente
 patent.inventors=Inventores da Patente
 applicants.available=Depositantes dispon\u00edveis para adicionar
 inventors.available=Inventores dispon\u00edveis para adicionar
+options.file=Op\u00e7\u00f5es da folha de rosto
+options.patent=Op\u00e7\u00f5es do arquivo da patente
 save=Salvar
 close=Fechar
 date=Data
