Adicionado tabela de documentos de prioridade nacional

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -119,3 +119,5 @@ adjustmentLot=Adjustment Lot
 juridicalNature=Juridical Nature
 none=None
 apply=Apply
+docsOfNationalPriority=Docs Of Brazilian Priority
+noneDocBrazilian=None registered document with brazilian priority
