--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -119,3 +119,5 @@ adjustmentLot=Harmoniza\u00e7\u00e3o em lote
 juridicalNature=Natureza J\u00faridica
 none=Nenhum
 apply=Aplicar
+docsOfNationalPriority=Docs de Prioridade Nacional
+noneDocBrazilian=Nenhum documento registrado com prioridade nacional
