Adicionado o gráfico de perfil tecnologico

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -121,3 +121,4 @@ none=None
 apply=Apply
 docsOfNationalPriority=Docs Of Brazilian Priority
 noneDocBrazilian=None registered document with brazilian priority
+technologicalProfile=Technologica Profile
