--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -121,3 +121,4 @@ none=Nenhum
 apply=Aplicar
 docsOfNationalPriority=Docs de Prioridade Nacional
 noneDocBrazilian=Nenhum documento registrado com prioridade nacional
+technologicalProfile=Perfil Tecnol\u00f3gico
