Adicionado grafico Natureza dos Depositantes

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -122,3 +122,4 @@ apply=Apply
 docsOfNationalPriority=Docs Of Brazilian Priority
 noneDocBrazilian=None registered document with brazilian priority
 technologicalProfile=Technologica Profile
+natureDepositor=Applicants Nature
