Distribuição Regional adicionado

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -123,3 +123,5 @@ docsOfNationalPriority=Docs Of Brazilian Priority
 noneDocBrazilian=None registered document with brazilian priority
 technologicalProfile=Technologica Profile
 natureDepositor=Applicants Nature
+stateDistribuition=State Distribuition
+regionDistribuition=Regional Distribuition
