--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -123,3 +123,5 @@ docsOfNationalPriority=Docs de Prioridade Nacional
 noneDocBrazilian=Nenhum documento registrado com prioridade nacional
 technologicalProfile=Perfil Tecnol\u00f3gico
 natureDepositor=Natureza do depositante
+stateDistribuition=Distribui\u00e7ao por Estado
+regionDistribuition=Distribui\u00e7ao Regional
