--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -106,7 +106,7 @@ espacenet.help=Para importar patentes da base ESPACENET<br>fa\u00e7a uma pesquis
 dpma.help=Para importar patentes da base DPMA fa\u00e7a uma pesquisa atrav\u00e9s do link.<br>Ap\u00f3s isso clique em "CSV" (Pr\u00f3ximo ao "DOWNLOAD RESULT LIST") para fazer o download do arquivo.
 project.help=<strong>Privados</strong><br>Projetos privados s\u00e3o aqueles em que somente seu criador tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.<br><strong>P\u00fablicos</strong><br>Projetos p\u00fablicos s\u00e3o aqueles em que todo usu\u00e1rio cadastrado no sistema tem acesso, mas, apenas<br>o criador do projeto tem poder de exclus\u00e3o/edi\u00e7\u00e3o<br><strong>Compartilhados</strong><br>Projetos compartilhados s\u00e3o aqueles em que os usu\u00e1rios selecionados e adicionados tem acesso e<br>poder de exclus\u00e3o/edi\u00e7\u00e3o<strong>P\u00fablico e Compartilhado</strong><br>O projeto pode ser p\u00fablico e compartilhado, ou seja, todos os usu\u00e1rios cadastrados no sistema tem<br>acesso ao projeto, mas, apenas os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do<br>projeto podem editar/ecluir o projeto<br><strong>Privado e Compartilhado</strong><br>O projeto pode tamb\u00e9m ser privado e compartilhado, ou seja, o projeto estar\u00e1 visivel apenas para os<br>usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto e esses tem acesso e poder<br>de exclus\u00e3o/edi\u00e7\u00e3o
 user.help=\u00c9 poss\u00edvel adicionar usu\u00e1rios ao projeto, assim, o projeto se torna compartilhado. A lista de sele\u00e7\u00e3o<br>cont\u00e9m todos os usu\u00e1rios cadastrados, exceto o usu\u00e1rio que logou no sistema, uma vez que esse \u00e9 o<br>dono do projeto e portanto j\u00e1 est\u00e1 incluso.
-build.value=build 20140502
+build.value=build 20140606
 private.company=Private Company
 individual=Individual
 private.university=Private University
@@ -125,3 +125,4 @@ technologicalProfile=Technologica Profile
 natureDepositor=Applicants Nature
 stateDistribuition=State Distribuition
 regionDistribuition=Regional Distribuition
+nature=Nature
