Adicionado Mattyws como developer do projeto

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -95,7 +95,7 @@ credits=Credits
 project.manager=<h4>Project Coordination</h4>
 manager.project=<ul><li>Josiel Maimone de Figueiredo (josiel@ic.ufmt.br)</li></ul>
 project.development=<h4>Development</h4>
-developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Phellippe Pinheiro</li> <li>Christhian Ferreira</li> </ul>
+developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Adrian Toledo Procopiou</li> <li>Phellippe Pinheiro</li> <li>Cristhian Ferreira</li> <li>Mattyws Ferreira Grawe</li> </ul>
 project.contribution=<h4>Contribution</4>
 contributors=<ul><li>Claudia Aparecida Martins</li> <li>Andreia Gentil Bonfante</li> <li>Thiago Meirelles Ventura</li> <li>Nilton Hideki Takagi</li> <li>Allan Gon\u00e7alves de Oliveira</li></ul>
 technologiesandproducts=Technologies and Products
