--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -95,7 +95,7 @@ credits=Cr\u00e9ditos
 project.manager=<h4>Coordena\u00e7\u00e3o do Projeto</h4>
 manager.project=<ul><li>Josiel Maimone de Figueiredo (josiel@ic.ufmt.br)</li></ul>
 project.development=<h4>Desenvolvimento</h4>
-developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Adrian Toledo Procopiou</li> <li>Phellippe Pinheiro</li> <li>Christhian Ferreira</li> </ul>
+developers=<ul><li>Raphael de Souza Rosa Gomes</li> <li>Alvaro Fellipe Mendes Viebrantz</li> <li>Andre Peripolli</li> <li>Guilherme Campos</li> <li>Adrian Toledo Procopiou</li> <li>Phellippe Pinheiro</li> <li>Cristhian Ferreira</li> <li>Mattyws Ferreira Grawe</li> </ul>
 project.contribution=<h4>Contribui\u00e7\u00f5es</h4>
 contributors=<ul><li>Claudia Aparecida Martins</li> <li>Andreia Gentil Bonfante</li> <li>Thiago Meirelles Ventura</li> <li>Nilton Hideki Takagi</li> <li>Allan Gon\u00e7alves de Oliveira</li></ul>
 technologiesandproducts=Tecnologias e Produtos
