Internacionalização completa do Periscope

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -126,3 +126,148 @@ natureDepositor=Applicants Nature
 stateDistribuition=State Distribuition
 regionDistribuition=Regional Distribuition
 nature=Nature
+#Editing User
+editing.user=Editing User
+#Nome Obrigat\u00f3rio
+obligatory.name=Name is Obligatory
+#Sobrenome
+surname=Last Name
+#Sobrenome Obrigat\u00f3rio
+obligatory.surname=Last name is Obligatory
+#Login \u00e9 Obrigat\u00f3rio
+obligatory.login=Login is Obligatory
+#Senha
+password=Password
+#Senha \u00e9 Obrigat\u00f3ria
+obligatory.password=Password is Obligatory
+#Tamanho m\u00ednimo de 6 caracteres
+least.six=The minimum size is 6 characters
+#N\u00edvel do Usu\u00e1rio
+user.level=User Level
+#Atualizar
+refresh=Refresh
+#Sem Permiss\u00e3o !
+no.permission=No Permission !
+#Editando Projeto
+editing.project=Editing Project
+#T\u00edtulo \u00e9 obrigat\u00f3rio
+obligatory.title=Title is obligatory
+#Sim
+yes=Yes
+#N\u00e3o
+no=No
+#N\u00e3o existem observadores para esse projeto
+no.observers=There are no observers for this project.
+#Selecione um Usu\u00e1rio
+user.select=Select a User
+#Ajuda
+help=Help
+#Projetos
+projects=Projects
+#Privados
+privados=Private
+#P\u00fablicos
+publics=Publics
+#Compartilhados
+compartilhados=Shared
+#P\u00fablico e Compartilhado
+shared.public=Shared and Public
+#Privado e Compartilhado
+shared.private=Shared and Private
+#Projetos privados s\u00e3o aqueles em que somente seu criador tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+private.info=Only the creator of a private project have the power to delete/edit.
+#Projetos p\u00fablicos s\u00e3o aqueles em que todo usu\u00e1rio cadastrado no sistema tem acesso, mas, apenas o criador do projeto tem poder de exclus\u00e3o/edi\u00e7\u00e3o.
+public.info=Every user has access to public projects but only the creator has the power to delete/edit.
+#Projetos compartilhados s\u00e3o aqueles em que os usu\u00e1rios selecionados e adicionados tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+shared.info=Selected users have the power to delete/edit shared projects.
+#O projeto pode ser p\u00fablico e compartilhado, ou seja, todos os usu\u00e1rios cadastrados no sistema tem acesso ao projeto, mas, apenas os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto podem editar/ecluir o projeto.
+shared.public.info=Every user has access to public and shared projects, but only the selected users have the power to delete/edit.
+#O projeto pode tamb\u00e9m ser privado e compartilhado, ou seja, o projeto estar\u00e1 visivel apenas para os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto e esses tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+shared.private.info=Selected users have access and the power to delete/edit private and shared projects.
+#\u00c9 poss\u00edvel adicionar usu\u00e1rios ao projeto, assim, o projeto se torna compartilhado. A lista de sele\u00e7\u00e3o cont\u00e9m todos os usu\u00e1rios cadastrados, exceto o usu\u00e1rio que logou no sistema, uma vez que esse \u00e9 o dono do projeto e portanto j\u00e1 est\u00e1 incluso.
+users.info=It's possible to add users to the project, the project becomes shared. The list contains all the registered users except the project creator.
+#Bem vindo ao projeto
+welcome.project=Welcome to the project
+#Nenhum depositante selecionado
+no.selectedapplicant=No applicants selected
+#Criar Nova Regra
+new.rule=Create New Rule
+#Nome harmonizado
+harmonized.name=Harmonized Name
+#Estado
+state=State
+#Nome selecionado
+selected.names=Selected Names
+#Sugest\u00f5es
+sugestions=Sugestions
+#N\u00e3o existem sugest\u00f5es
+no.sugestions=No sugestions available
+#Criar Regra
+create.rule=Create Rule
+#Harmoniza\u00e7\u00e3o
+harmonization=Harmonization
+#Listar Regras Criadas
+list.rules=List Created Rules
+#N\u00e3o existem inventores selecionados
+no.selectedinventors=No selected inventors
+#Regras de harmoniza\u00e7\u00e3o
+harmonization.rules=Harmonization rules
+#N\u00e3o existem regras
+no.rules=No rules
+#Substitui\u00e7\u00f5es
+substitutions=Substitutions
+#Tem certeza ?
+you.sure=Are you sure?
+#Importar dados
+import.data=Import data
+#Escolha o arquivo
+choose.files=Choose the files
+#Origem do arquivo
+file.origin=File Origin
+#Arquivos suportados
+supported.files=Supported files
+#Depositos
+applications=Applications
+#Inicial
+initial=Initial
+#N\u00famero de depositos por ano
+application.year=Number of applications per year
+#Principais Classifica\u00e7oes
+main.classifications=Main Classifications
+#N\u00famero de classifica\u00e7\u00f5es
+classification.numbers=Number of classifications
+#Nenhuma classifica\u00e7\u00e3o cadastrada
+no.classifications=No registered classification
+#Perfil tecnologico
+technological.profile=Technological profile
+#N\u00famero de classifica\u00e7\u00f5es por depositante
+classification.applicant=Number of classifications per applicant
+#Nenhuma natureza cadastrada
+no.nature=No registered nature
+#Pa\u00edses com maior prioridade
+higher.priority=Higher priority countries
+#Publica\u00e7\u00f5es
+publications=Publications
+#N\u00famero de publica\u00e7\u00f5es por ano
+publication.year=Number of publications per year
+#Distribui\u00e7\u00e3o Regional
+regional.distribuition=Regional Distribuition
+#N\u00famero de patentes por regi\u00e3o
+patents.region=Number of patents per region
+#Nenhuma patente brasileira
+no.brazilian=None brazilian patents
+#Regi\u00e3o
+region=Region
+#Distribui\u00e7\u00e3o por estado
+state.distribuition=Distribuition per state
+#Numero de patentes por estado
+patents.state=Number of patents per state
+#Usu\u00e1rios
+users=Users
+#Harmonizar dados
+harmonize.data=Harmonize data
+ufmt=Federal University of Mato Grosso (UFMT)
+ic=Institute of Computation - UFMT
+ufmt.info=The Federal University of Mato Grosso (UFMT) is a public university created in 1970 and linked to the Brazilian Education Ministry, with campi Cuiaba, Rondonopolis, Pontal do Araguaia, Barra do Garcas and Sinop being Cuiaba the main campi. The educational, research and extension activities are concentrated in 99 graduations and 60 specializations sustained in investigation and extension cores, where more than 34 000 studants study.
+ic.info=The Institute of Computation (IC), of the Federal University of Mato Grosso is an excellence academic unity of the computation area, focused to the formation of people on academic research\tof the BS, MS scope and extension. Created on 2008 resulting from the will and effort of professors, students, technicians, society and the sensibility of the UFMT`s main administration.
+upload.files=Upload All
