--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -126,3 +126,148 @@ natureDepositor=Natureza do depositante
 stateDistribuition=Distribui\u00e7ao por Estado
 regionDistribuition=Distribui\u00e7ao Regional
 nature=Natureza
+#Editing User
+editing.user=Editando Usu\u00e1rio
+#Nome Obrigat\u00f3rio
+obligatory.name=Nome \u00e9 Obrigat\u00f3rio
+#Sobrenome
+surname=Sobrenome
+#Sobrenome Obrigat\u00f3rio
+obligatory.surname=Sobrenome \u00e9 Obrigat\u00f3rio
+#Login \u00e9 Obrigat\u00f3rio
+obligatory.login=Login \u00e9 Obrigat\u00f3rio
+#Senha
+password=Senha
+#Senha \u00e9 Obrigat\u00f3ria
+obligatory.password=Senha \u00e9 Obrigat\u00f3ria
+#Tamanho m\u00ednimo de 6 caracteres
+least.six=Tamanho m\u00ednimo de 6 caracteres
+#N\u00edvel do Usu\u00e1rio
+user.level=N\u00edvel do Usu\u00e1rio
+#Atualizar
+refresh=Atualizar
+#Sem Permiss\u00e3o !
+no.permission=Sem Permiss\u00e3o !
+#Editando Projeto
+editing.project=Editando Projeto
+#T\u00edtulo \u00e9 obrigat\u00f3rio
+obligatory.title=T\u00edtulo \u00e9 obrigat\u00f3rio
+#Sim
+yes=Sim
+#N\u00e3o
+no=N\u00e3o
+#N\u00e3o existem observadores para esse projeto
+no.observers=N\u00e3o existem observadores para esse projeto.
+#Selecione um Usu\u00e1rio
+user.select=Selecione um Usu\u00e1rio
+#Ajuda
+help=Ajuda
+#Projetos
+projects=Projetos
+#Privados
+privados=Privados
+#P\u00fablicos
+publics=P\u00fablicos
+#Compartilhados
+compartilhados=Compartilhados
+#P\u00fablico e Compartilhado
+shared.public=P\u00fablico e Compartilhado
+#Privado e Compartilhado
+shared.private=Privado e Compartilhado
+#Projetos privados s\u00e3o aqueles em que somente seu criador tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+private.info=Projetos privados s\u00e3o aqueles em que somente seu criador tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+#Projetos p\u00fablicos s\u00e3o aqueles em que todo usu\u00e1rio cadastrado no sistema tem acesso, mas, apenas o criador do projeto tem poder de exclus\u00e3o/edi\u00e7\u00e3o.
+public.info=Projetos p\u00fablicos s\u00e3o aqueles em que todo usu\u00e1rio cadastrado no sistema tem acesso, mas, apenas o criador do projeto tem poder de exclus\u00e3o/edi\u00e7\u00e3o.
+#Projetos compartilhados s\u00e3o aqueles em que os usu\u00e1rios selecionados e adicionados tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+shared.info=Projetos compartilhados s\u00e3o aqueles em que os usu\u00e1rios selecionados e adicionados tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+#O projeto pode ser p\u00fablico e compartilhado, ou seja, todos os usu\u00e1rios cadastrados no sistema tem acesso ao projeto, mas, apenas os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto podem editar/ecluir o projeto.
+shared.public.info=O projeto pode ser p\u00fablico e compartilhado, ou seja, todos os usu\u00e1rios cadastrados no sistema tem acesso ao projeto, mas, apenas os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto podem editar/excluir o projeto.
+#O projeto pode tamb\u00e9m ser privado e compartilhado, ou seja, o projeto estar\u00e1 visivel apenas para os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto e esses tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+shared.private.info=O projeto pode tamb\u00e9m ser privado e compartilhado, ou seja, o projeto estar\u00e1 visivel apenas para os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto e esses tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.
+#\u00c9 poss\u00edvel adicionar usu\u00e1rios ao projeto, assim, o projeto se torna compartilhado. A lista de sele\u00e7\u00e3o cont\u00e9m todos os usu\u00e1rios cadastrados, exceto o usu\u00e1rio que logou no sistema, uma vez que esse \u00e9 o dono do projeto e portanto j\u00e1 est\u00e1 incluso.
+users.info=\u00c9 poss\u00edvel adicionar usu\u00e1rios ao projeto, assim, o projeto se torna compartilhado. A lista de sele\u00e7\u00e3o cont\u00e9m todos os usu\u00e1rios cadastrados, exceto o usu\u00e1rio que logou no sistema, uma vez que esse \u00e9 o dono do projeto e portanto j\u00e1 est\u00e1 incluso.
+#Bem vindo ao projeto
+welcome.project=Bem vindo ao projeto
+#Nenhum depositante selecionado
+no.selectedapplicant=Nenhum depositante selecionado
+#Criar Nova Regra
+new.rule=Criar Nova Regra
+#Nome harmonizado
+harmonized.name=Nome harmonizado
+#Estado
+state=Estado
+#Nome selecionado
+selected.names=Nomes selecionados
+#Sugest\u00f5es
+sugestions=Sugest\u00f5es
+#N\u00e3o existem sugest\u00f5es
+no.sugestions=N\u00e3o existem sugest\u00f5es
+#Criar Regra
+create.rule=Criar Regra
+#Harmoniza\u00e7\u00e3o
+harmonization=Harmoniza\u00e7\u00e3o
+#Listar Regras Criadas
+list.rules=Listar Regras Criadas
+#N\u00e3o existem inventores selecionados
+no.selectedinventors=N\u00e3o existem inventores selecionados
+#Regras de harmoniza\u00e7\u00e3o
+harmonization.rules=Regras de harmoniza\u00e7\u00e3o
+#N\u00e3o existem regras
+no.rules=N\u00e3o existem regras
+#Substitui\u00e7\u00f5es
+substitutions=Substitui\u00e7\u00f5es
+#Tem certeza ?
+you.sure=Tem certeza ?
+#Importar dados
+import.data=Importar dados
+#Escolha o arquivo
+choose.files=Escolha os arquivos
+#Origem do arquivo
+file.origin=Origem do arquivo
+#Arquivos suportados
+supported.files=Arquivos suportados
+#Depositos
+applications=Depositos
+#Inicial
+initial=Inicial
+#N\u00famero de depositos por ano
+application.year=N\u00famero de depositos por ano
+#Principais Classifica\u00e7oes
+main.classifications=Principais Classifica\u00e7\u00f5es
+#N\u00famero de classifica\u00e7\u00f5es
+classification.numbers=N\u00famero de classifica\u00e7\u00f5es
+#Nenhuma classifica\u00e7\u00e3o cadastrada
+no.classifications=Nenhuma classifica\u00e7\u00e3o cadastrada
+#Perfil tecnologico
+technological.profile=Perfil tecnol\u00f3gico
+#N\u00famero de classifica\u00e7\u00f5es por depositante
+classification.applicant=N\u00famero de classifica\u00e7\u00f5es por depositante
+#Nenhuma natureza cadastrada
+no.nature=Nenhuma natureza cadastrada
+#Pa\u00edses com maior prioridade
+higher.priority=Pa\u00edses com maior prioridade
+#Publica\u00e7\u00f5es
+publications=Publica\u00e7\u00f5es
+#N\u00famero de publica\u00e7\u00f5es por ano
+publication.year=N\u00famero de publica\u00e7\u00f5es por ano
+#Distribui\u00e7\u00e3o Regional
+regional.distribuition=Distribui\u00e7\u00e3o Regional
+#N\u00famero de patentes por regi\u00e3o
+patents.region=N\u00famero de patentes por regi\u00e3o
+#Nenhuma patente brasileira
+no.brazilian=Nenhuma patente brasileira
+#Regi\u00e3o
+region=Regi\u00e3o
+#Distribui\u00e7\u00e3o por estado
+state.distribuition=Distribui\u00e7\u00e3o por estado
+#Numero de patentes por estado
+patents.state=N\u00famero de patentes por estado
+#Usu\u00e1rios
+users=Usu\u00e1rios
+#Harmonizar dados
+harmonize.data=Harmonizar dados
+ufmt=Universidade Federal de Mato Grosso (UFMT)
+ic=Instituto de Computa\u00e7\u00e3o - UFMT
+ufmt.info=A Universidade Federal de Mato Grosso (UFMT) \u00e9 uma universidade p\u00fablica federal criada em 1970 e vinculada ao Minist\u00e9rio da Educa\u00e7\u00e3o (Brasil), com campi em Cuiab\u00e1 onde se situa a atual sede, Rondon\u00f3polis, Pontal do Araguaia, Barra do Gar\u00e7as e Sinop no estado de Mato Grosso, Brasil. As atividades de ensino, pesquisa e extens\u00e3o est\u00e3o concentradas em 99 cursos de gradua\u00e7\u00e3o (inclu\u00eddas as habilita\u00e7\u00f5es) e 60 de especializa\u00e7\u00e3o sustentados em n\u00facleos de investiga\u00e7\u00e3o e extens\u00e3o, onde mais de 34 000 estudantes realizam seus estudos.
+ic.info=O Instituto de Computa\u00e7\u00e3o (IC), da Universidade Federal de Mato Grosso, \u00e9 uma unidade acad\u00eamica de excel\u00eancia da \u00e1rea de computa\u00e7\u00e3o, destinada \u00e0 forma\u00e7\u00e3o de pessoas e \u00e0 pesquisa acad\u00eamica no \u00e2mbito da gradua\u00e7\u00e3o, da p\u00f3s-gradua\u00e7\u00e3o e da extens\u00e3o. Constitu\u00eddo em 2008 como resultado do desejo e esfor\u00e7os de professores, alunos, t\u00e9cnicos, sociedade em geral e da sensibilidade da administra\u00e7\u00e3o superior da UFMT.
+upload.files=Enviar Arquivos
