--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -106,7 +106,7 @@ espacenet.help=Para importar patentes da base ESPACENET<br>fa\u00e7a uma pesquis
 dpma.help=Para importar patentes da base DPMA fa\u00e7a uma pesquisa atrav\u00e9s do link.<br>Ap\u00f3s isso clique em "CSV" (Pr\u00f3ximo ao "DOWNLOAD RESULT LIST") para fazer o download do arquivo.
 project.help=<strong>Privados</strong><br>Projetos privados s\u00e3o aqueles em que somente seu criador tem acesso e poder de exclus\u00e3o/edi\u00e7\u00e3o.<br><strong>P\u00fablicos</strong><br>Projetos p\u00fablicos s\u00e3o aqueles em que todo usu\u00e1rio cadastrado no sistema tem acesso, mas, apenas<br>o criador do projeto tem poder de exclus\u00e3o/edi\u00e7\u00e3o<br><strong>Compartilhados</strong><br>Projetos compartilhados s\u00e3o aqueles em que os usu\u00e1rios selecionados e adicionados tem acesso e<br>poder de exclus\u00e3o/edi\u00e7\u00e3o<strong>P\u00fablico e Compartilhado</strong><br>O projeto pode ser p\u00fablico e compartilhado, ou seja, todos os usu\u00e1rios cadastrados no sistema tem<br>acesso ao projeto, mas, apenas os usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do<br>projeto podem editar/ecluir o projeto<br><strong>Privado e Compartilhado</strong><br>O projeto pode tamb\u00e9m ser privado e compartilhado, ou seja, o projeto estar\u00e1 visivel apenas para os<br>usu\u00e1rios selecionados e adicionados na cria\u00e7\u00e3o ou na edi\u00e7\u00e3o do projeto e esses tem acesso e poder<br>de exclus\u00e3o/edi\u00e7\u00e3o
 user.help=\u00c9 poss\u00edvel adicionar usu\u00e1rios ao projeto, assim, o projeto se torna compartilhado. A lista de sele\u00e7\u00e3o<br>cont\u00e9m todos os usu\u00e1rios cadastrados, exceto o usu\u00e1rio que logou no sistema, uma vez que esse \u00e9 o<br>dono do projeto e portanto j\u00e1 est\u00e1 incluso.
-build.value=build 20140606
+build.value=build 20140628
 private.company=Empresa Privada
 individual=Pessoa F\u00edsica
 private.university=Universidade Privada
@@ -220,7 +220,7 @@ substitutions=Substitui\u00e7\u00f5es
 you.sure=Tem certeza ?
 #Importar dados
 import.data=Importar dados
-#Escolha o arquivo
+#Escolha os arquivo
 choose.files=Escolha os arquivos
 #Origem do arquivo
 file.origin=Origem do arquivo
@@ -271,3 +271,9 @@ ic=Instituto de Computa\u00e7\u00e3o - UFMT
 ufmt.info=A Universidade Federal de Mato Grosso (UFMT) \u00e9 uma universidade p\u00fablica federal criada em 1970 e vinculada ao Minist\u00e9rio da Educa\u00e7\u00e3o (Brasil), com campi em Cuiab\u00e1 onde se situa a atual sede, Rondon\u00f3polis, Pontal do Araguaia, Barra do Gar\u00e7as e Sinop no estado de Mato Grosso, Brasil. As atividades de ensino, pesquisa e extens\u00e3o est\u00e3o concentradas em 99 cursos de gradua\u00e7\u00e3o (inclu\u00eddas as habilita\u00e7\u00f5es) e 60 de especializa\u00e7\u00e3o sustentados em n\u00facleos de investiga\u00e7\u00e3o e extens\u00e3o, onde mais de 34 000 estudantes realizam seus estudos.
 ic.info=O Instituto de Computa\u00e7\u00e3o (IC), da Universidade Federal de Mato Grosso, \u00e9 uma unidade acad\u00eamica de excel\u00eancia da \u00e1rea de computa\u00e7\u00e3o, destinada \u00e0 forma\u00e7\u00e3o de pessoas e \u00e0 pesquisa acad\u00eamica no \u00e2mbito da gradua\u00e7\u00e3o, da p\u00f3s-gradua\u00e7\u00e3o e da extens\u00e3o. Constitu\u00eddo em 2008 como resultado do desejo e esfor\u00e7os de professores, alunos, t\u00e9cnicos, sociedade em geral e da sensibilidade da administra\u00e7\u00e3o superior da UFMT.
 upload.files=Enviar Arquivos
+start.with=Inicia Com
+
+contains=Cont\u00e9m
+filter.type=Tipo de Filtro
+developed.by=Desenvolvido pelo grupo TIPI do Instituto de Computa\u00e7\u00e3o da UFMT
+applicants.number=N\u00famero de Aplicantes
