Adicionar patente e corrigido o nome do menu "Depositantes por data"

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -62,7 +62,7 @@ main.applicant=Main Applicants
 main.inventor=Main Inventors
 empty=Empty
 main.classification=Main Classifications
-application.date=Application by Date
+application.date=Application Date
 priority.country=Priority Countries
 priority.date=Priority Dates
 overview=Basic Statistics
@@ -276,3 +276,6 @@ contains=Contains
 filter.type=Filter Type
 developed.by=Developed by TIPI group of the Institute of Computing UFMT
 applicants.number=Number of Aplicants
+create.patent=Adding Patent
+add.patent=Add Patent
+publication.number=Publication Number
