--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -62,7 +62,7 @@ main.applicant=Principais Depositantes
 main.inventor=Principais Inventores
 empty=Vazio
 main.classification=Principais Classifica\u00e7\u00f5es
-application.date=Dep\u00f3sitos por Data
+application.date=Data de Dep\u00f3sito
 priority.country=Pa\u00edses de Prioridade
 priority.date=Datas de Prioridade
 overview=Estat\u00edsticas B\u00e1sicas
@@ -277,3 +277,6 @@ contains=Cont\u00e9m
 filter.type=Tipo de Filtro
 developed.by=Desenvolvido pelo grupo TIPI do Instituto de Computa\u00e7\u00e3o da UFMT
 applicants.number=N\u00famero de Aplicantes
+create.patent=Adicionando Patente
+add.patent=Adicionar patente
+publication.number=N\u00famero de Publica\u00e7\u00e3o
