#236 #237 Patente blacklist e incompleta volta a aparecer na listagem Bugs na adição de patente corrigidas, como selecionar inventores e depositantes sem que os campos obrigatórios estejam preenchidos além da validação da patente

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -279,3 +279,4 @@ applicants.number=Number of Aplicants
 create.patent=Adding Patent
 add.patent=Add Patent
 publication.number=Publication Number
+obligatory.field=is obligatory
