--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -280,3 +280,4 @@ applicants.number=N\u00famero de Aplicantes
 create.patent=Adicionando Patente
 add.patent=Adicionar patente
 publication.number=N\u00famero de Publica\u00e7\u00e3o
+obligatory.field=\u00e9 obrigat\u00f3rio
