--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -280,3 +280,4 @@ create.patent=Adding Patent
 add.patent=Add Patent
 publication.number=Publication Number
 obligatory.field=is obligatory
+save.apply=Save and Apply
