Bugs no upload e download de arquivos corrigidos

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -280,3 +280,7 @@ create.patent=Adding Patent
 add.patent=Add Patent
 publication.number=Publication Number
 obligatory.field=is obligatory
+delete.file=Delete file
+choose.file=Choose the file
+help.upload=Select a new file to be added to the patent
+help.delete=To upload a new file you must delete the current one
