--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -281,3 +281,7 @@ create.patent=Adicionando Patente
 add.patent=Adicionar patente
 publication.number=N\u00famero de Publica\u00e7\u00e3o
 obligatory.field=\u00e9 obrigat\u00f3rio
+delete.file=Deletar arquivo
+choose.file=Escolha o arquivo
+help.upload=Selecione um novo arquivo para adicionar a patente
+help.delete=Para fazer o upload de um novo arquivo voc\u00ea deve deletar o arquivo atual
