Adicionado salvar e aplicar regra no applicant

--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -285,3 +285,4 @@ delete.file=Deletar arquivo
 choose.file=Escolha o arquivo
 help.upload=Selecione um novo arquivo para adicionar a patente
 help.delete=Para fazer o upload de um novo arquivo voc\u00ea deve deletar o arquivo atual
+save.apply=Salvar e Aplicar
