--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -284,3 +284,4 @@ delete.file=Delete file
 choose.file=Choose the file
 help.upload=Select a new file to be added to the patent
 help.delete=To upload a new file you must delete the current one
+save.apply=Save and Apply
