Mudanças na adição de patentes, Organização feita numa única página separado por partes de dados que podem ser minimizadas e mudados alguns titulos em botões, além do filtro em invetores e depositantes

--- a/periscope-web/src/main/resources/messages_en_US.properties
+++ b/periscope-web/src/main/resources/messages_en_US.properties
@@ -2,8 +2,8 @@ presentation.file=Presentation File
 patent.info=Patent File
 patent.applicants=Patent's Applicants
 patent.inventors=Patent's Inventors
-applicants.available=Applicants available to addition
-inventors.available=Inventors available to addition
+applicants.available=Applicants available in project
+inventors.available=Inventors available in project
 options.file=Presentation file options
 options.patent=Patent file options
 save=Save
