--- a/periscope-web/src/main/resources/messages_pt_BR.properties
+++ b/periscope-web/src/main/resources/messages_pt_BR.properties
@@ -1,9 +1,9 @@
 presentation.file=Folha de Rosto
 patent.info=Arquivo da Patente
-patent.applicants=Depositantes da Patente
-patent.inventors=Inventores da Patente
-applicants.available=Depositantes dispon\u00edveis para adicionar
-inventors.available=Inventores dispon\u00edveis para adicionar
+patent.applicants=Depositantes desta Patente
+patent.inventors=Inventores desta Patente
+applicants.available=Depositantes dispon\u00edveis no projeto
+inventors.available=Inventores dispon\u00edveis no projeto
 options.file=Op\u00e7\u00f5es da folha de rosto
 options.patent=Op\u00e7\u00f5es do arquivo da patente
 save=Salvar
